# velodyne_height_map

./: CHANGELOG.rst  CMakeLists.txt  README.rst  mainpage.dox  manifest.xml  package.xml  stack.xml
include/velodyne_height_map/: heightmap.h
launch/: heightmap_nodelet.launch
src/: heightmap_node.cpp  heightmap_nodelet.cpp
tests/: heightmap_node_hz.test  heightmap_nodelet_hz.test
velodyne_calibration/: CMakeLists.txt  mainpage.dox  manifest.xml  rosbuild.cmake
velodyne_calibration/cfg/: VelodyneFilter.cfg
velodyne_calibration/include/velodyne_calibration/: Calibration.h  CalibrationUtilities.h  VelodyneUtil.h  main_window.hpp  qnode.hpp
velodyne_calibration/include/velodyne_pointcloud/: calibration.h  rawdata.h  ring_sequence.h
velodyne_calibration/src/: angles2yaml.cc  calibration_test.cpp  main.cpp  main_window.cpp  qnode.cpp
velodyne_calibration/src/lib/: CalibrationUtilities.cc  VelodyneUtil.cc  calibration.cc  rawdata.cc
velodyne_calibration/src/node/: calibrator.py  cloud.cc  cloud2.cc
velodyne_calibration/src/nodes/: calibrator.cc
velodyne_height_map/: CMakeLists.txt  manifest.xml  nodelets.xml
velodyne_height_map/include/velodyne_height_map/: heightmap.h
velodyne_height_map/src/: heightmap.cpp  heightmap_nodelet.cpp
velodyne_height_map/tests/: heightmap_node_hz.test  heightmap_nodelet_hz.test
velodyne_image/: CMakeLists.txt  manifest.xml
velodyne_image/cfg/: CircularImage.cfg  OverheadImage.cfg  circular_image.cfg  overhead_image.cfg
velodyne_image/include/velodyne_image/: circular_image_generator.h  common.h  overhead_image_generator.h
velodyne_image/include/velodyne_image_generation/: circular_image_generator.h  overhead_image_generator.h
velodyne_image/src/lib/: CMakeLists.txt  CircularImageGenerator.cc  circular_image_generator.cpp  common.cpp  overhead_image_generator.cpp
velodyne_image/src/nodes/: CMakeLists.txt  circular_image.cc  overhead_image.cc
velodyne_image_generation/: manifest.xml
velodyne_image_generation/cfg/: CircularImage.cfg  OverheadImage.cfg
velodyne_image_generation/include/velodyne_image_generation/: ImageRef.h  OverheadImageGenerator.h
velodyne_image_generation/src/lib/: CMakeLists.txt  OverheadImageGenerator.cc
velodyne_image_generation/src/nodes/: CMakeLists.txt  circular_image.cc  obstacle.cc  overhead_image.cc
