<package>

  <name>velodyne_height_map</name>
  <version>0.4.1</version>
  <description>
    Obstacle detection for 3D point clouds using a height map algorithm.
  </description>
  <maintainer email="jack.oquin@gmail.com">Jack O'Quin</maintainer>
  <author>David Claridge</author>
  <author>Michael Quinlan</author>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/velodyne_height_map</url>
  <url type="repository">https://github.com/jack-oquin/velodyne_height_map.git</url>
  <url type="bugtracker">https://github.com/jack-oquin/velodyne_height_map/issues</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>angles</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>

  <test_depend>velodyne_driver</test_depend>
  <test_depend>velodyne_pointcloud</test_depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>

</package>
